@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: config.test,v 1.1.2.1 2002/02/05 23:58:02 andreas_kupries Exp $
+# RCS: @(#) $Id: config.test,v 1.1.2.2 2002/04/05 13:49:57 das Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -21,7 +21,7 @@ if {[lsearch [namespace children] ::tcltest] == -1} {
 
 test pkgconfig-1.1 {query keys} {
     lsort [::tcl::pkgconfig list]
-} {64bit compile_debug compile_stats debug exec_prefix,install exec_prefix,runtime mem_debug optimized prefix,install prefix,runtime profiled threaded}
+} {64bit bindir,install bindir,runtime compile_debug compile_stats debug docdir,install docdir,runtime includedir,install includedir,runtime libdir,install libdir,runtime mem_debug optimized profiled scriptdir,install scriptdir,runtime threaded}
 
 test pkgconfig-1.2 {query keys multiple times} {
     string compare [::tcl::pkgconfig list] [::tcl::pkgconfig list]
@@ -29,8 +29,8 @@ test pkgconfig-1.2 {query keys multiple times} {
 
 test pkgconfig-1.3 {query value multiple times} {
     string compare \
-	    [::tcl::pkgconfig get exec_prefix,install] \
-	    [::tcl::pkgconfig get exec_prefix,install]
+	    [::tcl::pkgconfig get bindir,install] \
+	    [::tcl::pkgconfig get bindir,install]
 } 0
 
 
